add solution to problem 621

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCE_FILES
     src/sortedSquares.cpp
     src/numIslands.cpp
     src/gardenNoAdj.cpp
+    src/leastInterval.cpp
     src/MinStack.cpp
 )
 
