add solution to problem 198

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,11 @@ set(SOURCE_FILES
     src/twoSum.cpp
     src/addTwoNumbers.cpp
     src/lengthOfLongestSubstring.cpp
+    src/reverse.cpp
     src/romanToInt.cpp
     src/longestConsecutive.cpp
     src/threeSum.cpp
+    src/rob.cpp
     src/findPeakElement.cpp
     src/climbStairs.cpp
     src/reverseList.cpp
