add solution to problem 1030

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(include)
 
 set(SOURCE_FILES
     src/twoSum.cpp
+    src/allCellsDistOrder.cpp
     src/addTwoNumbers.cpp
     src/lengthOfLongestSubstring.cpp
     src/reverse.cpp
